== 0.6.3 2010-03-02

=== Bugfixes
* Split arguments in cucumber.yml with shellwords. Example: myprofile: --out="Features report.html" (Nathaniel Haas)
* Breakage in Rails 2-3-stable after html_safe is added to the repo. (#577 Aslak Hellesøy)
* uninitialized constant Cucumber::CODEPAGE (NameError) (#561 Aslak Hellesøy)
* HTML Formatter is broken in cucumber 0.6.2 and cuke4duke 0.2.3 (#567 Dan Fitch)
* Ensure consistent load order of support files (#564 Mike Sassak)
* Fix various places in PDF formatter where HTML entities could break prawn (Matt Wynne)
* The rerun formatter outputs failed, pending and undefined scenarios (before: only failing) (Aslak Hellesøy)

=== New features
* Added "Angenommen" as German synonym for Given (Sven Fuchs, Aslak Hellesøy)
* New #ask(question, timeout_seconds=60) method available to stepdefs. Asks for input and #announce-s question and answer. (Aslak Hellesøy)
* Links to step definitions are now clickable in TextMate's HTML report (Rob Aldred)
* Add diff! message to wire protocol to allow for immediate diff response to invokes (Matt Wynne)
* Add tags to begin/end scenario messages on wire protocol to support tagged hooks (#571 Matt Wynne)
* Default timeouts to 120s for invoke, begin_scenario and end_scenario messages in wire protocol (#572 Matt Wynne)

== 0.6.2 2010-01-18

=== Bugfixes
* Update --help for --tags which was out of date. (Aslak Hellesøy)
* Explicitly use Prawn 0.6.3 for pdf formatter since 0.7.1 is broken (Aslak Hellesøy)
* PDF formatter renders tables incorrectly (#553 Andy Waite)
* Better colouring in HTML report (Rob Aldred)
* Detect output encoding properly on JRuby+Windows (Aslak Hellesøy)
* Added option to override output encoding on Windows with an CUCUMBER_OUTPUT_ENCODING env var (Aslak Hellesøy)
* PDF generation requires 'prawn-format' (#558 Aslak Hellesøy)

=== New features
* Show profiles in error scenario summary. (#550 Joseph Wilk)

=== Removed features