@@ -92,13 +92,17 @@ module Cucumber
         keywords('and', space)
       end
 
+      def given_keyword
+        keywords('given', false)[1] # The 0th one is a '*', which we don't want
+      end
+
       def step_keywords
         %w{given when then and but}.map{|key| keywords(key, true)}.flatten.uniq
       end
 
       def keywords(key, space=false)
         raise "No #{key} in #{@keywords.inspect}" if @keywords[key].nil?
-        @keywords[key].split('|').map{|kw| space ? keyword_space(kw) : kw}
+        @keywords[key].split('|').map{|kw| space ? keyword_space(kw) : kw}.uniq
       end
 
       private
