@@ -1,3 +1,8 @@
+== In Git
+
+=== Bugfixes
+* Snippets are properly printed when using '*' as step keyword. (Used to cause infinite recursion). (Aslak Hellesøy)
+
 == 0.6.3 2010-03-02
 
 === Bugfixes
